--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -102,3 +102,5 @@
   pinyin: Chǔ Yè Qí
 - ideogram: 廣西大中葉種
   pinyin: GuǎngXī Dà ZhōngYè Zhòng
+- ideogram: 其他外地引進品種
+  pinyin: QíTā WàiDì YǐnJìn PǐnZhǒng
