--- a/data/yaml/pickings.yaml
+++ b/data/yaml/pickings.yaml
@@ -33,8 +33,8 @@
 - ideogram: 一芽 四五葉
   pinyin: YīYá SìWǔYè
   fr: un bourgeon et quatre ou cinq feuilles
-- ideogram: 一芽 四五葉
-  pinyin: Yī Yá WǔLiù Yè
+- ideogram: 一芽 五六葉
+  pinyin: YīYá WǔLiù Yè
   fr: un bourgeon et cinq ou six feuilles
 - ideogram: 三葉
   pinyin: Sān Yè
