--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -703,7 +703,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures: 90
       quantity: '1:20'
       durations:
@@ -746,7 +746,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures: 90
       quantity: '1:20'
       durations:
@@ -796,7 +796,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures: 90
       quantity: '1:20'
       durations:
@@ -849,7 +849,7 @@
       times:
         - 4
         - 8
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 95
         - 100
@@ -904,7 +904,7 @@
       times:
         - 4
         - 8
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 90
         - 95
@@ -958,7 +958,7 @@
       times:
         - 4
         - 8
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 90
         - 95
@@ -1016,7 +1016,7 @@
       times:
         - 4
         - 8
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 85
         - 90
@@ -1163,7 +1163,7 @@
       times:
         - 5
         - 20
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 95
         - 100
@@ -1216,7 +1216,7 @@
       times:
         - 4
         - 8
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 95
         - 100
@@ -1269,7 +1269,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 90
         - 95
@@ -1320,7 +1320,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 90
         - 95
@@ -1371,7 +1371,7 @@
       times:
         - 4
         - 6
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures:
         - 90
         - 95
@@ -1506,7 +1506,7 @@
       times:
         - 5
         - 10
-    - type: 小壺泡法
+    - type: 鼓泡法
       temperatures: 100
       quantity: '1:40'
       durations:
