--- a/data/yaml/provinces.yaml
+++ b/data/yaml/provinces.yaml
@@ -20,6 +20,8 @@
   pinyin: ZhōngGuó ĀnHuī
 - ideogram: 中國四川
   pinyin: ZhōngGuó SìChuān
+- ideogram: 中國山東
+  pinyin: ZhōngGuó ShānDōng
 - ideogram: 中國廣東
   pinyin: ZhōngGuó GuǎngDōng
 - ideogram: 中國貴州
