--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -104,3 +104,9 @@
   pinyin: GuǎngXī Dà ZhōngYè Zhòng
 - ideogram: 其他外地引進品種
   pinyin: QíTā WàiDì YǐnJìn PǐnZhǒng
+- ideogram: 獨山小葉種
+  pinyin: DúShān XiǎoYè Zhòng
+- ideogram: 齊山中葉種
+  pinyin: Qí ShānZhōng YèZhòng
+- ideogram: 外地引進品種
+  pinyin: WàiDì YǐnJìn PǐnZhǒng
