--- a/data/yaml/teaware.yaml
+++ b/data/yaml/teaware.yaml
@@ -6,7 +6,7 @@
   pinyin: CháGuàn
   fr: boite à thé
   en: tea caddy
-- ideogram: 查金
+- ideogram: 茶巾
   pinyin: CháJīn
   fr: serviette à thé
   en: tea towel
@@ -20,7 +20,7 @@
   en: teapot boat
 - ideogram: 茶盤
   pinyin: CháPán
-  fr: plateau d'infusion
+  fr: plateau pour servir
   en: tea pad
 - ideogram: 壺承
   pinyin: HúChéng
@@ -55,7 +55,7 @@
   en: brewing teacup
 - ideogram: 品茗杯
   pinyin: Pǐn míng bēi
-  fr: tasse pour le thé
+  fr: tasse pour pour déguster le thé
   en: teacup for drinking
 - ideogram: 杯托
   pinyin: BēiTuō
