adds ceremony tea caddy

--- a/data/yaml/teawares.yaml
+++ b/data/yaml/teawares.yaml
@@ -6,6 +6,9 @@
   pinyin: CháGuàn
   fr: boite à thé
   en: tea caddy
+- ideogram: 茶仓
+  fr: pot à thé
+  en: ceremony tea box
 - ideogram: 茶巾
   pinyin: CháJīn
   fr: serviette à thé
