--- a/data/yaml/teawares.yaml
+++ b/data/yaml/teawares.yaml
@@ -6,7 +6,7 @@
   pinyin: CháGuàn
   fr: boite à thé
   en: tea caddy
-- ideogram: 茶仓
+- ideogram: 茶倉
   fr: pot à thé
   en: ceremony tea box
 - ideogram: 茶巾
