--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -2028,3 +2028,44 @@
       times:
         - 4
         - 30
+        
+- ideogram: 一品香
+  pinyin: Yīpǐnxiāng
+  type: 綠茶
+  families: 炒青綠茶
+  harvests: 春季
+  provinces: [中國貴州]
+  towns: [鳳岡]
+  cultivars: 貴定鳥王品種
+  pickings:
+    - 一芽 一葉
+    - 一芽 二葉
+    - 一芽 三葉
+  oxidations:
+    - 0
+    - 0
+  brews:
+    - type: 茶杯泡法
+      temperatures:
+        - 75
+        - 85
+      quantity: '1:50'
+      durations:
+        - 45
+        - 60
+        - 80
+      times:
+        - 2
+        - 4
+    - type: 蓋碗泡法
+      temperatures:
+        - 75
+        - 85
+      quantity: '1:30'
+      durations:
+        - 30
+        - 60
+      times:
+        - 2
+        - 4
+
